--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Heroku ve Github</h2>
+<h2>Heroku ve Github degistirdik</h2>
 <p>
-  The time is now: <%= Time.now %>
+  Zaman filan degistir artik: <%= Time.now %>
 </p>
